--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <img src="./assets/ProfilePic.png" alt="Surya Venkat Medisetty profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">Hello, I
+          'm</p>
         <h1 class="title">Surya Venkat Medisetty</h1>
         <p class="section__text__p2">Software Developer</p>
         <div class="btn-container">
